[DO NOT MERGE] set fixed version for testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "zha-quirks"
-dynamic = ["version"]
+version = "0.0.113"
 description = "Library implementing Zigpy quirks for ZHA in Home Assistant"
 urls = {repository = "https://github.com/zigpy/zha-device-handlers"}
 authors = [
